@@ -1,20 +1,0 @@
-/*-------------------------------------------------------------------------
- *
- *   FILE
- *	pqxx/notify-listen
- *
- *   DESCRIPTION
- *      Obsolete pqxx::notify_listener functor interface.
- *   Predecessor to notification_receiver.  Deprecated.  Do not use.
- *
- * Copyright (c) 2007-2011, Jeroen T. Vermeulen <jtv@xs4all.nl>
- *
- * See COPYING for copyright license.  If you did not receive a file called
- * COPYING with this source code, please notify the distributor of this mistake,
- * or contact the author.
- *
- *-------------------------------------------------------------------------
- */
-// Actual definitions in .hxx file so editors and such recognize file type
-#include "pqxx/notify-listen.hxx"
-
